--- a/src/screens/Signup.css
+++ b/src/screens/Signup.css
@@ -30,7 +30,14 @@
     font-size: 18px;
     font-weight: 600;
     line-height: 40px;
-    margin-bottom: 60px;
+    margin-bottom: 40px;
+}
+
+.lower-text-area {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 28.9px;
+    color: #4B4B4B;
 }
 
 .input-box {
