--- a/src/screens/Signup_4.css
+++ b/src/screens/Signup_4.css
@@ -5,6 +5,11 @@
     gap: 16px;
     margin: 20px 0;
     margin-top: 60px;
+
+    border: 1px solid #EEEEEE;
+    border-radius: 12px;
+    padding: 20px 30px;
+    background-color: #ffffff;
 }
 
 .number-input-field button {
