--- a/src/screens/Signup.css
+++ b/src/screens/Signup.css
@@ -53,6 +53,52 @@
     box-sizing: border-box;
 }
 
+.select-box-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.select-box {
+    width: 351px;
+    height: 48px;
+    padding: 12px 16px;
+    align-items: center;
+    border-radius: 15px;
+    border: 1px solid #CACACA;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-between;
+    background-color: #ffffff;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+    transition: background-color 0.2s;
+    color: #CACACA;
+}
+
+.select-box:hover {
+    background-color: #8E8E8E;
+    color: #ffffff;
+}
+
+.select-box.active {
+    background-color: #EEEEEE;
+    border: 1px solid #CACACA;
+    color: #8E8E8E;
+    font-weight: 600;
+}
+
+.select-box img.check-icon {
+    display: none;
+    width: 20px;
+    height: 20px;
+}
+
+.select-box.active img.check-icon {
+    display: block;
+}
+
 .input-box::placeholder {
     font-size: 16px;
 }
