--- a/src/screens/LogoScreen.css
+++ b/src/screens/LogoScreen.css
@@ -69,13 +69,13 @@
     gap: 16px;
 }
 
-.kakao-login {
-    background-color: #FEE500;
+.login-button {
+    background: #00bba9;
     color: #000000;
 }
 
-.kakao-login:hover {
-    background-color: #e5d400;
+.login:hover {
+    background-color: #009986;
 }
 
 .signup-button {
