--- a/src/screens/Signup.css
+++ b/src/screens/Signup.css
@@ -27,7 +27,7 @@
 .text-area {
     width: 292px;
     color: #000;
-    font-size: 18px;
+    font-size: 15px;
     font-weight: 600;
     line-height: 40px;
     margin-bottom: 40px;
@@ -47,6 +47,7 @@
     padding: 12px 16px;
     align-items: center;
     gap: 8px;
+    margin-top: 40px;
     align-self: stretch;
     border-radius: 12px;
     border: 1px solid #CACACA;
