--- a/src/styles/Signup.css
+++ b/src/styles/Signup.css
@@ -1,8 +1,10 @@
+body { margin: 0; }
+
 .title-bar {
     display: flex;
-    width: 390px;
     height: 56px;
     padding: 18px 0 14px 0;
+    margin: 0 auto;
     justify-content: center;
     align-items: center;
     background: #ffffff;
@@ -19,9 +21,12 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 32px;
-    align-self: stretch;
     background: #ffffff;
     transition: all 1.5s ease-in-out;
+
+    width: 100%;
+    max-width: 390px;
+    margin: 0 auto;
 }
 
 .text-area {
@@ -31,7 +36,7 @@
     font-weight: 600;
     line-height: 20px;
     margin-bottom: 40px;
-    letter-spacing: 1px;
+    letter-spacing: -1px;
 }
 
 .lower-text-area {
@@ -145,6 +150,7 @@
 .signup-success-img {
     display: block;
     margin: 0 auto;
-    max-width: 80%;
+    max-width: 50%;
     height: auto;
+    animation: fadeUp 0.6s ease 0.05s both;
 }
