--- a/src/styles/Signup.css
+++ b/src/styles/Signup.css
@@ -17,7 +17,7 @@ body { margin: 0; }
 
 .frame {
     display: flex;
-    padding: 32px 20px;
+    padding: 32px 10px;
     flex-direction: column;
     align-items: flex-start;
     gap: 32px;
@@ -27,6 +27,8 @@ body { margin: 0; }
     width: 100%;
     max-width: 390px;
     margin: 0 auto;
+    height: calc(100vh - 56px);
+    box-sizing: border-box;
 }
 
 .text-area {
