--- a/src/styles/Signup_4.css
+++ b/src/styles/Signup_4.css
@@ -2,19 +2,18 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 16px;
     margin: 20px 0;
-    margin-top: 60px;
+    margin-top: 30px;
 
-    border: 1px solid #EEEEEE;
-    border-radius: 12px;
-    padding: 20px 30px;
+    border: 2px solid #EEEEEE;
+    border-radius: 25px;
+    padding: 30px;
     background-color: #ffffff;
 }
 
 .number-input-field button {
-    width: 48px;
-    height: 48px;
+    width: 40px;
+    height: 40px;
     border: none;
     border-radius: 50%;
     background-color: #f5f5f5;
@@ -37,17 +36,10 @@
 .number-input-field input {
     width: 80px;
     text-align: center;
-    font-size: 28px;
-    font-weight: bold;
     border: none;
     background: transparent;
 }
 
 .number-input-field input:focus {
     outline: none;
-}
-
-.number-input-field span {
-    font-size: 20px;
-    font-weight: 500;
 }
